--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="en">
 <title>vishnu html</title>
+<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<
    <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
 </head>
 <style>
@@ -51,10 +61,15 @@ background-attachment: fixed;
 <body background="back.jpg">
 <div class="hero-image">
   <div class="hero-text">
-    <marquee loop="2" bgcolor="">
-<h1> welcome</h1></marquee>
-     <h2><marquee>to my page</marquee></h2>
+  <div class="container-fluid">
+  <div class="row">
+  <div class="col-xs-12">
+<center><marquee><h1> welcome</h1></marquee></center>
+     <center><h2><marquee>to my page</marquee></h2></center>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
 </div>
-  </center></h3></center></body></html>
+</div>
+</div>
+</div>
+  </center></h3></center></body></html> 
