--- a/vishnunew.html
+++ b/vishnunew.html
@@ -1,21 +1,37 @@
 
 <!DOCTYPE html>
 <!-- saved from url=(0051)file:///C:\Users\indhu_2\Desktop\vishnu page/n.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html lang="en"> 
+<head>
 <title>vishnu html</title>
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<
+   <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
 <style>
 h1{ 
    color: red;
+   border-radius: 200px;
+   word-wrap: break-word;
    background-colour:blue;
   font-family:Broadway;
   font-size: 70px;
   font-weight: 400;
   line-height: 60px;
-  margin: 0;
+  margin: 20px 50px 20px 50px;
   }
   
 h2 {
   color: #f46842;
+  word-wrap: break-word;
+  font-feature-settings: all;
   font-family:MT Poster Compressed;
   font-size: 38px;
   font-weight: 100;
@@ -25,9 +41,11 @@ h2 {
     p {
     color:#0bd0e2;
     text-align:center;
+    word-wrap: break-word;
+    font-feature-settings: all;
     font-style:italic;
     background-color:gray;
-    width:350px;
+    width: px;
     line-height:70px;
     line-weight:100px;
     line-spacing:5px;
@@ -40,7 +58,6 @@ h2 {
 background-color:#76aefc;
 border:3px double black;
 border-radius:20px;
-
   }
     .button {
     color: #e2360f;
@@ -58,6 +75,8 @@ img{
     border-radius: 50%;
 border-color:block;
 border:3px solid silver ;
+margin-top:100px;
+
    }
 body{
 background-size: cover;
@@ -68,11 +87,12 @@ background-repeat:no repeat;
 .para{
  color:#ed6002;
   font-style: italic;
+  word-wrap: break-word;
+  font-feature-settings: all;
   font-family:Edwardian Script ITC;
   text-align: center;
   font-size: 45px;
   font-weight: 200px;
-  width:550px;
 text-align:left;
 line-height:60px;
 line-weight:30px;
@@ -94,20 +114,35 @@ padding:10px 20px 10px 20px;
 <div class="hero-image>
 <div class="hero-text>
 <div class="margin">
+<div class="container">
    <center><marquee><h1><i>Navaneethamahavishnu</i></h1></marquee></center>
 </div>
-   
+   </div>
 <div class="image">
-   <center><img src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px" padding-top="60px"></center>
+   <center><img src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px" padding-top="60px" margin-top="100px"></center>
 </div>
 <center><a href="data.html"><button class="button">data</button></a></center>
+<div class="container">
 <h2><u>about me</u></h2>
 <div class="para">
+<div class="row">
+<div class="col-xs-12">
 i am A.Navaneethamahavishnu,second year ,computer science  and engineering,studing ksr college of engineering,tiruchengode.......
 </div>
+</div>
+</div>
+<div class="row">
+<div class="col-xs-12">
      <div class="tht"><center><u>success has no time limit</u></center></div>
+     </div>
+     </div>
+     <div class="row">
+     <div class="col-xs-12">
   <center><p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p></center>
+  </div>
+  </div>
 <center><a href="index.html"><button class="button">back</button></a></center>
  </div>
+</div>
 </div>
   </center></h3></center></body></html>
