--- a/data.html
+++ b/data.html
@@ -1,5 +1,17 @@
-
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta  name="viewport" content="width=device-width,initial-scale=1" >
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<
+   <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
 <title>data html</title>
 <style type="text/css" rel="stylesheet">
 h1{ 
@@ -97,7 +109,6 @@ color:#833dce;
 	word-wrap: break-word;
 	margin: 10px;
 	line-height: 100px;
-	
 	}
 	.progress[value]::-webkit-progress-bar{
 		width: 250px;
@@ -110,21 +121,27 @@ color:#833dce;
 		border-radius: 5px;
 		background-color: #eee;
 		box-shadow: aqua;
-
-
 	}
   </style></head>	
 	  <body background="clg2.jpg">
 <div class="hero-image">
 <div class="hero-text"> 	
 <div class="detail">
+<div class="container">
+<div class="row">
+<div class="col-xs-12">
   <center><h1><marquee>bio-data</marquee></h1></center>
+  </div>
+</div>
+</div>
+</div>
 <center><i><table class="table" border="0px solid black" cellspacing="20px" font-style="italic">
 <div class="table">
+<dl>
 <tr>
-<td>name</td>
-<td>Navaneethamahavishnu</td>
-</tr>
+<dt><td>name</td></dt>
+<dd><td>Navaneethamahavishnu</td></dd>
+</tr></dl>
 <tr>
 <td>place</td>
 <td>thiruchengode</td>
@@ -168,7 +185,13 @@ color:#833dce;
 <div class="hero-text>
 	<div class="image">
 </div>
+<div class="container">
+<div class="row">
+<div class="col-xs-12">
 		<center><h1><marquee><i>contact</marquee></i></h1></center>
+		</div>
+		</div>
+		</div>
 <div class="table">
 <center><i><table cellspacing="20px" border="0px solid black">
 	<tr>
@@ -194,7 +217,13 @@ color:#833dce;
 </div>
 </div>
 </div>
+<div class="container">
+<div class="row">
+<div class="col-xs-12">
 		<center><h1><marquee>education</marquee></h1></center>
+		</div>
+		</div>
+		</div>
 <center><table cellspacing="20px">
 <tr>
   <td class="let">10th marks</td>
@@ -234,6 +263,8 @@ color:#833dce;
 <td><progress value="60" max="100" content="7.7"></progress></td>
 </tr>
 </table></center>
+</div>
+</div>
 </body>
 <center><a href="vishnunew.html"><button class="button">home</button></a></center>
 </html>
