--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@ font-style:bold;
         margin: 90;
    }
 body{
-   background-repeat:no repeat;
-background-size: cover;
-background-attachment: fixed;
+ background-size:cover;
+  background-repeat: no-repeat;
+  background-origin: 10px;
+  background-attachment: fixed;
+  margin: 10px;
+  border: 3px dotted black; 
+  margin: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
+  overflow:scroll; 
 }
 .button {
     color: red;
