--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 h1{ 
    color: #1404f2;
    background-colour:blue;
-  font-family:arial;
+  font-family:Edwardian Script ITC;
 font-style:italic;
 font-style:bold;
   font-size: 120px;
@@ -29,7 +29,7 @@ font-style:bold;
    h2{
       color: #1404f2;
    background-colour:blue;
-  font-family:arial;
+  font-family:Edwardian Script ITC;
 font-style:italic;
 font-style:bold;
   font-size: 80px;
