--- a/data.html
+++ b/data.html
@@ -30,7 +30,7 @@ padding:20px 20px 20px 20px;
 h2 {
   color: #020316;
   font-style: italic;
-  font-family:Edwardian Script ITC;
+  font-family:	;
   text-align: center;
   font-size: 45px;
   font-weight: 200px;
@@ -57,10 +57,10 @@ h4 {
 	.table{
 	color:#131219;
 	text-align: center;
-	font-size: 100px;
-	font-family: Edwardian Script ITC;
-	font-weight: 100px;
-	line-height: 100px
+	font-size: 70px;
+	font-family: Century Schoolbook;
+	font-weight: 70px;
+	line-height: 70px
 }
 	.button {
     color: red;
@@ -101,14 +101,14 @@ color:#833dce;
 	}
 	.let{
 		color:#131219;
-		font-size:100px;
-		font-weight: 100px;
-		font-family:  Edwardian Script ITC;
+		font-size:70px;
+		font-weight: 70px;
+		font-family: Century Schoolbook;
 	letter-spacing: 4px;
 	word-spacing: 2px;
 	word-wrap: break-word;
 	margin: 10px;
-	line-height: 100px;
+	line-height: 70px;
 	}
 	.progress[value]::-webkit-progress-bar{
 		width: 250px;
@@ -129,18 +129,16 @@ color:#833dce;
 <div class="detail">
 <div class="container">
 <div class="row">
-<div class="col-xs-12">
+<div class="col-lg-12">
   <center><h1><marquee>bio-data</marquee></h1></center>
   </div>
 </div>
 </div>
 </div>
-<center><i><table class="table" border="0px solid black" cellspacing="20px" font-style="italic">
-<div class="table">
-<dl>
+<center><i><table class="table table-hover">	
 <tr>
-<dt><td>name</td></dt>
-<dd><td>Navaneethamahavishnu</td></dd>
+<td>name</td>
+<td>Navaneethamahavishnu</td></dd>
 </tr></dl>
 <tr>
 <td>place</td>
@@ -192,8 +190,7 @@ color:#833dce;
 		</div>
 		</div>
 		</div>
-<div class="table">
-<center><i><table cellspacing="20px" border="0px solid black">
+<center><i><table class="table table-hover" >
 	<tr>
 		<th><img src="contact1.png"with="100px"height="100px"></th>
 		<th>9524180019</th>
@@ -223,7 +220,7 @@ color:#833dce;
 		<center><h1><marquee>education</marquee></h1></center>
 		</div>
 	</div>
-<center><table cellspacing="20px">
+<center><table class="table table-hover">
 <tr>
   <td class="let">10th marks</td>
   <div class="progress">
@@ -244,7 +241,7 @@ color:#833dce;
 </tr>
 </table></center>
 <center class="cor"><marquee>course completed</marquee></center>
-<center><table cellspacing="20px">
+<center><table class="table table-hover">
 <tr>
   <td class="let">html</td>
   <td><progress value="100" max="100" width="50px" color ="blue" height="20px"></progress></td>
