--- a/vishnunew.html
+++ b/vishnunew.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!-- saved from url=(0051)file:///C:\Users\indhu_2\Desktop\vishnu page/n.html -->
 <html lang="en"> 
@@ -76,7 +75,6 @@ img{
 border-color:block;
 border:3px solid silver ;
 margin-top:100px;
-
    }
 body{
 background-size: cover;
@@ -89,7 +87,7 @@ background-repeat:no repeat;
   font-style: italic;
   word-wrap: break-word;
   font-feature-settings: all;
-  font-family:Edwardian Script ITC;
+  font-family:Century Schoolbook;
   text-align: center;
   font-size: 45px;
   font-weight: 200px;
@@ -101,7 +99,7 @@ padding:10px 20px 10px 20px;
 .tht{
   color: #00020f;
   font-weight: 100px;
-  font-family: Edwardian Script ITC;
+  font-family:;
   font-size: 100px;
   font-feature-settings: all;
   line-height: 100px;
@@ -119,7 +117,7 @@ padding:10px 20px 10px 20px;
 </div>
    </div>
 <div class="image">
-   <center><img src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px" padding-top="60px" margin-top="100px"></center>
+   <center><img  class="img-responsive" src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px" padding-top="60px" margin-top="100px"></center>
 </div>
 <center><a href="data.html"><button class="button">data</button></a></center>
 <div class="container">
