--- a/data.html
+++ b/data.html
@@ -16,52 +16,46 @@
 <title>data html</title>
 <style type="text/css" rel="stylesheet">
 h1{ 
-   color:block ;
-  font-family:Broadway;
-  font-size: 70px;
-  font-weight: 400;
-  line-height: 60px;
-border:7px solid #9e3c99;
-background:#aa652c;
-	border-radius:15px;
-	letter-spacing:3px;
-padding:20px 20px 20px 20px;
+   color:white ;
+ font-size:70px;
+	font-family: Broadway;
+	letter-spacing: 4px;
+	word-spacing: 2px;
+	word-wrap: break-word;
+	margin: 10px;
+	line-height: 70px;
+	border:3px solid gray;
+	background-color: #363a6a;
+	border-radius: 190px;
+	margin: 100px 300px 100px 300px;
   }
-  
-h2 {
-  color: #020316;
-  font-style: italic;
-  font-family:	;
-  text-align: center;
-  font-size: 45px;
-  font-weight: 200px;
-text-align:center;
-line-height:60px;
-line-weight:30px;
-padding:10px 20px 10px 20px;
+  h2{ 
+   color:white ;
+ font-size:40px;
+	font-family: Broadway;
+	letter-spacing: 4px;
+	word-spacing: 2px;
+	word-wrap: break-word;
+	margin: 20px;
+	line-height: 40px;
+	border:3px solid gray;
+	background-color: #363a6a;
+	border-radius: 190px;
+	margin: 150px 300px 100px 300px;
+  }
+	table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ddd;
 }
-h3 {
-  color: green;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 28px;
-  font-weight: 400;
-  line-height: 30px;
-  margin: 10px 0px;
-  text-align: center;
+
+th, td {
+    border: none;
+    text-align: left;
+    padding: 8px;
 }
-h4 {
-  color: green;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-}
-	.table{
-	color:#131219;
-	text-align: center;
-	font-size: 70px;
-	font-family: Century Schoolbook;
-	font-weight: 70px;
-	line-height: 70px
+tr:nth-child(even){background-color: #f2f2f2;
 }
 	.button {
     color: red;
@@ -86,58 +80,17 @@ body{
 	padding: 10px 10px 10px 10px;
 	overflow:scroll;
 }
-.cor{
-color:#833dce;
-	font-size:70px;
-	font-family: Broadway;
-	letter-spacing: 4px;
-	word-spacing: 2px;
-	word-wrap: break-word;
-	margin: 10px;
-	line-height: 70px;
-	border:3px solid gray;
-	background-color: #363a6a;
-	border-radius: 190px;
-	margin: 100px 300px 100px 300px;
-	}
-	.let{
-		color:#131219;
-		font-size:70px;
-		font-weight: 70px;
-		font-family: Century Schoolbook;
-	letter-spacing: 4px;
-	word-spacing: 2px;
-	word-wrap: break-word;
-	margin: 10px;
-	line-height: 70px;
-	}
-	.progress[value]::-webkit-progress-bar{
-		width: 250px;
-		height: 30px;
-		content: '';
-		position: absolute;
-		appearance:none;
-		top: 7px;
-		border: 3px solid black;
-		border-radius: 5px;
-		background-color: #eee;
-		box-shadow: aqua;
-	}
   </style></head>	
 	  <body background="clg2.jpg">
 <div class="hero-image">
-<div class="hero-text"> 	
-<div class="detail">
-<div class="container">
+<div class="hero-text">
+<div class="container-fluid">
 <div class="row">
 <div class="col-lg-12">
   <center><h1><marquee>bio-data</marquee></h1></center>
-  </div>
-</div>
-</div>
-</div>
-
-<center><i><table class="table table-hover">  	
+<center><i><table class="table table-hover">  
+<div class="table-responsive"> 
+<div style="overflow-x:auto;">	
 <tr>
 <td>name</td>
 <td>Navaneethamahavishnu</td></dd>
@@ -179,19 +132,21 @@ color:#833dce;
 </div>
 </div>
 </div>
+</div>
+</div>
+</div>
+</div>
+</table>
   </center></h3></center>
 <body background="cont1.jpg">
 	<div class="hero-image>
 <div class="hero-text>
 	<div class="image">
 </div>
-<div class="container">
+<div class="container-fluid">
 <div class="row">
 <div class="col-xs-12">
 		<center><h1><marquee><i>contact</marquee></i></h1></center>
-		</div>
-		</div>
-		</div>
 <center><i><table class="table table-hover" >
 	<tr>
 		<th><img src="contact1.png"with="100px"height="100px"></th>
@@ -216,48 +171,46 @@ color:#833dce;
 </div>
 </div>
 </div>
-<div class="container">
+<div class="container-fluid">
 <div class="row">
 <div class="col-xs-12">
 		<center><h1><marquee>education</marquee></h1></center>
-		</div>
-	</div>
 <center><table class="table table-hover">
 <tr>
-  <td class="let">10th marks</td>
+  <td>10th marks(84%)</td>
   <div class="progress">
-  <td><progress value="84" max="100" width="50px" color ="blue" height="20px"></progress></td>
+  <td><progress value="84" max="100"></progress></td>
 </div>
 
 </tr>
-<td class="let">12th marks</td>
+<td>12th marks(82%)</td>
 <td><progress value="82" max="100" content='989'> </progress></td>
 </tr>
 <tr>
-<td class="let">1st semster</td>
+<td>1st semster(7.3)</td>
 <td><progress value="73" max="100" content="7.3"></progress></td>
 </tr>
 <tr>
-<td class="let">2nd semester</td>
+<td>2nd semester(7.7)</td>
 <td><progress value="77" max="100" height="50px" width="50px"></progress></td>
 </tr>
 </table></center>
-<center class="cor"><marquee>course completed</marquee></center>
+<center><h2><marquee>course completed</marquee></h2></center>
 <center><table class="table table-hover">
 <tr>
-  <td class="let">html</td>
+  <td>html(100%)</td>
   <td><progress value="100" max="100" width="50px" color ="blue" height="20px"></progress></td>
 
 </tr>
-<td class="let">css</td>
+<td >css(100%)</td>
 <td><progress value="100" max="100" content='989'> </progress></td>
 </tr>
 <tr>
-<td class="let">java script</td>
+<td >java script(20%)</td>
 <td><progress value="20" max="100" content="7.3"></progress></td>
 </tr>
 <tr>
-<td class="let">c++</td>
+<td>c++(60%)</td>
 <td><progress value="60" max="100" content="7.7"></progress></td>
 </tr>
 </table></center>
