--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <style>
 h1{ 
-   color: #1404f2;
+   color:#070606;
    background-colour:blue;
   font-family:Edwardian Script ITC;
 font-style:italic;
@@ -27,7 +27,7 @@ font-style:bold;
   margin: 0;
 }
    h2{
-      color: #1404f2;
+      color:#070606;
    background-colour:blue;
   font-family:Edwardian Script ITC;
 font-style:italic;
