--- a/vishnunew.html
+++ b/vishnunew.html
@@ -70,9 +70,7 @@ border-radius:20px;
     font-size: 16px;
     margin:20px 20px 20px 20px;
    }
-img{
-    border-radius: 50%;
-border-color:block;
+img-circle{
 border:3px solid silver ;
 margin-top:100px;
    }
@@ -109,6 +107,7 @@ padding:10px 20px 10px 20px;
   </style></head>	
 
   <body background="backimage1.jpg" alt="gif1">
+
 <div class="hero-image>
 <div class="hero-text>
 <div class="margin">
@@ -116,8 +115,7 @@ padding:10px 20px 10px 20px;
    <center><marquee><h1><i>Navaneethamahavishnu</i></h1></marquee></center>
 </div>
    </div>
-<div class="image">
-   <center><img  class="img-responsive" src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px" padding-top="60px" margin-top="100px"></center>
+<img src="photo.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
 </div>
 <center><a href="data.html"><button class="button">data</button></a></center>
 <div class="container">
