--- a/vishnunew.html
+++ b/vishnunew.html
@@ -115,7 +115,7 @@ padding:10px 20px 10px 20px;
    <center><marquee><h1><i>Navaneethamahavishnu</i></h1></marquee></center>
 </div>
    </div>
-<img src="photo.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+<center><img src="photo.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236"></center>
 </div>
 <center><a href="data.html"><button class="button">data</button></a></center>
 <div class="container">
