--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@ font-style:bold;
         margin: 90;
    }
 body{
- background-size:cover;
+ background-size:100%;
   background-repeat: no-repeat;
   background-origin: 10px;
   background-attachment: fixed;
   margin: 10px;
   border: 3px dotted black; 
   margin: 10px 10px 10px 10px;
-  padding: 10px 10px 10px 10px;
-  overflow:scroll; 
+  padding: 10px 10px 10px 10px; 
 }
 .button {
     color: red;
