--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body{
    }
 </style>
 </head>
-<body background="back.jpg">
+<body background="back.png">
 <div class="hero-image">
   <div class="hero-text">
   <div class="container-fluid">
