--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <style>
 h1{ 
-   color:#070606;
+   color:#e7e8e5;
    background-colour:blue;
   font-family:Edwardian Script ITC;
 font-style:italic;
@@ -39,7 +39,7 @@ font-style:bold;
         margin: 90;
    }
 body{
- background-size:100%;
+ background-size:85%;
   background-repeat: no-repeat;
   background-origin: 10px;
   background-attachment: fixed;
