--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <
    <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
+   <script type="text/javascript">  
+function msg(){  
+ alert("Hello Javatpoint");  
+}  
+   </script>
 </head>
 <style>
 h1{ 
@@ -71,7 +76,7 @@ body{
   <div class="col-xs-12">
 <center><marquee><h1> welcome</h1></marquee></center>
      <center><h2><marquee>to my page</marquee></h2></center>
-<center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
+<center><a href="vishnunew.html"><input type="button" value="click me!" onclick="msg()"/></button></a></center>
 </div>
 </div>
 </div>
