--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
    <script type="text/javascript">  
 function msg(){  
- alert("Hello Javatpoint");  
+ alert("welcome to my official page");  
 }  
    </script>
 </head>
@@ -23,7 +23,7 @@ function msg(){
 h1{ 
    color:#0008f2;
    background-colour:blue;
-  font-family:Edwardian Script ITC;
+  font-family:arial;
 font-style:italic;
 font-style:bold;
   font-size: 120px;
@@ -71,12 +71,11 @@ body{
 <body background="back.jpg">
 <div class="hero-image">
   <div class="hero-text">
-  <div class="container-fluid">
+  <div class="container-fliud">
   <div class="row">
   <div class="col-xs-12">
 <center><marquee><h1> welcome</h1></marquee></center>
-     <center><h2><marquee>to my page</marquee></h2></center>
-<center><a href="vishnunew.html"><input type="button" value="click me!" onclick="msg()"/></button></a></center>
+<center><a href="vishnunew.html"><div class="button">input type="button" value="click me!" onclick="msg()"/></button></a></center>
 </div>
 </div>
 </div>
