--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body{
   <div class="row">
   <div class="col-xs-12">
 <center><marquee><h1> welcome</h1></marquee></center>
-<center><a href="vishnunew.html"><div class="button">input type="button" value="click me!" onclick="msg()"/></button></a></center>
+<center><a href="vishnunew.html"><div class="button"><input type="button" value="click me!" onclick="msg()"/></button></a></center>
 </div>
 </div>
 </div>
