--- a/login page.html
+++ b/login page.html
@@ -101,7 +101,7 @@ margin: 0px 150px 0px 150px;
   <form class="modal-content animate" action="/action_page.php">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <img src="photo.png" alt="Avatar" class="avatar">
+      <img src="photo.jpg" alt="welcome to my webside" class="avatar">
     </div>
 
     <div class="container">
