--- a/login page.html
+++ b/login page.html
@@ -88,7 +88,6 @@ body{
   background-attachment: scroll;
   background-repeat: no repeat;
     margin: 10px 100px 10px 100px;
-    background-color: white;
 }
 .full{
   border-radius: 10px;
@@ -96,12 +95,12 @@ body{
 margin: 0px 150px 0px 150px;
 }
 </style>
-<body >
+<body background="log.jpg">
 <div class="full">
   <form class="modal-content animate" action="/action_page.php">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <img src="photo.jpg" alt="welcome to my webside" class="avatar">
+      <img src="log2.jpg" alt="welcome to my webside" class="avatar">
     </div>
 
     <div class="container">
