--- a/vishnunew.html
+++ b/vishnunew.html
@@ -97,11 +97,11 @@ padding:10px 20px 10px 20px;
 }
 .tht{
   color: #00020f;
-  font-weight: 100px;
+  font-weight: 50px;
   font-family:;
-  font-size: 100px;
+  font-size: 50px;
   font-feature-settings: all;
-  line-height: 100px;
+  line-height: 50px;
   word-wrap: break-word;
   word-spacing: 3px;
 }
@@ -211,20 +211,37 @@ i am A.Navaneethamahavishnu,second year ,computer science  and engineering,studi
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="C:\Users\admin\Desktop\back.jpg" style="width:100%">
+  <div class="numbertext">1 / 6</div>
+  <img src="img1.jpg" style="width:100%">
   <div class="text">school</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="C:\Users\admin\Desktop\log.jpg" style="width:100%">
+  <div class="numbertext">2 / 6</div>
+  <img src="img2.jpg" style="width:100%">
   <div class="text">college </div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="C:\Users\admin\Desktop\ksr2.jpg" style="width:100%">
+  <div class="numbertext">3 / 6</div>
+  <img src="img3.jpg" style="width:100%">
+  <div class="text">college</div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">4 / 6</div>
+  <img src="img4.jpg" style="width:100%">
+  <div class="text">college</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">5 / 6</div>
+  <img src="img5.jpg" style="width:100%">
+  <div class="text">college </div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">6 / 6</div>
+  <img src="img6.jpg" style="width:100%">
   <div class="text">college</div>
 </div>
 
