--- a/vishnunew.html
+++ b/vishnunew.html
@@ -1,283 +1,94 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)file:///C:\Users\indhu_2\Desktop\vishnu page/n.html -->
 <html lang="en"> 
 <head>
-<title>vishnu html</title>
+<title>vishnu page</title>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<
    <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
-<style>
-h1{ 
-   color: red;
-   border-radius: 200px;
-   word-wrap: break-word;
-   background-colour:blue;
-  font-family:Broadway;
-  font-size: 70px;
-  font-weight: 400;
-  line-height: 60px;
-  margin: 20px 50px 20px 50px;
-  }
-  
-h2 {
-  color: #f46842;
-  word-wrap: break-word;
-  font-feature-settings: all;
-  font-family:MT Poster Compressed;
-  font-size: 38px;
-  font-weight: 100;
-  line-height: 70px;
-  word-spacing: 3px;
-}
-    p {
-    color:#0bd0e2;
-    text-align:center;
-    word-wrap: break-word;
-    font-feature-settings: all;
-    font-style:italic;
-    background-color:gray;
-    width: px;
-    line-height:70px;
-    line-weight:100px;
-    line-spacing:5px;
-    font-family:arial;
-    boder-radius:50px;
-    border:5px double black;
-         margin:20px 20px 20px 20px;
-  }
-  .margin{
-background-color:#76aefc;
-border:3px double black;
-border-radius:20px;
-  }
-    .button {
-    color: #e2360f;
-  background-color: gray;
-  font-weight: bold;
-    border: 3px solid silver;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin:20px 20px 20px 20px;
-   }
-img-circle{
-border:3px solid silver ;
-margin-top:100px;
-   }
-body{
-background-size: cover;
-background-attachment: fixed;
-background-repeat:no repeat;
-   boder:3px dotted black;
-}
-.para{
- color:#ed6002;
-  font-style: italic;
-  word-wrap: break-word;
-  font-feature-settings: all;
-  font-family:Century Schoolbook;
-  text-align: center;
-  font-size: 45px;
-  font-weight: 200px;
-text-align:left;
-line-height:60px;
-line-weight:30px;
-padding:10px 20px 10px 20px;
-}
-.tht{
-  color: #00020f;
-  font-weight: 50px;
-  font-family:;
-  font-size: 50px;
-  font-feature-settings: all;
-  line-height: 50px;
-  word-wrap: break-word;
-  word-spacing: 3px;
-}
-* {box-sizing:border-box}
-body {font-family: Verdana,sans-serif;}
-.mySlides {display:none}
+<style type="text/css">
+	h1{
+		text-align: center;
+		background-image: url(header.jpg);
+		background-size: cover;
+		opacity: 0.9;
+		font-size: 90px;
+		font-family:Algerian;
+		font-style: italic;
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 13px;
-  width: 13px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-  </style></head> 
-
-  <body background="backimage1.jpg" alt="gif1">
-
-<div class="hero-image>
-<div class="hero-text>
-<div class="margin">
-<div class="container">
-   <center><marquee><h1><i>Navaneethamahavishnu</i></h1></marquee></center>
-</div>
-   </div>
-<center><img src="photo.jpg" class="img-circle" alt="no one can judge me! " width="304" height="236"></center>
-</div>
-<center><a href="data.html"><button class="button">data</button></a></center>
-<div class="container">
-<h2><u>about me</u></h2>
-<div class="para">
-<div class="row">
-<div class="col-xs-12">
-i am A.Navaneethamahavishnu,second year ,computer science  and engineering,studing ksr college of engineering,tiruchengode.......
-</div>
-</div>
-</div>
-<div class="row">
-<div class="col-xs-12">
-     <div class="tht"><center><u>success has no time limit</u></center></div>
-     </div>
-     </div>
-     <div class="row">
-     <div class="col-xs-12">
-  <center><p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p></center>
-  </div>
-  </div>
-
-<h2>my gallery</h2>
-<div class="slideshow-container">
-
-<div class="mySlides fade">
-  <div class="numbertext">1 / 6</div>
-  <img src="img1.jpg" style="width:100%">
-  <div class="text">school</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 6</div>
-  <img src="img2.jpg" style="width:100%">
-  <div class="text">college </div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 6</div>
-  <img src="img3.jpg" style="width:100%">
-  <div class="text">college</div>
-</div>
-<div class="mySlides fade">
-  <div class="numbertext">4 / 6</div>
-  <img src="img4.jpg" style="width:100%">
-  <div class="text">college</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">5 / 6</div>
-  <img src="img5.jpg" style="width:100%">
-  <div class="text">college </div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">6 / 6</div>
-  <img src="img6.jpg" style="width:100%">
-  <div class="text">college</div>
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-
-<script>
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-    var i;
-    var slides = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("dot");
-    for (i = 0; i < slides.length; i++) {
-       slides[i].style.display = "none";  
-    }
-    slideIndex++;
-    if (slideIndex > slides.length) {slideIndex = 1}    
-    for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";  
-    dots[slideIndex-1].className += " active";
-    setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-</script>
-
-<center><a href="index.html"><button class="button">back</button></a></center>
- </div>
-</div>
-</div>
-  </center></h3></center></body></html>
+	}
+	h2{
+		text-align: right;
+		font-size: 60px;
+		margin-right: 50px;
+	}
+	h3{
+		color: #1E41BD;
+		font-size: 70px;
+		font-family: Agency FB;
+		text-align: center;
+	}
+	.box{
+		background-image: url(box.jpg);
+		height:500px;
+		background-size: cover;
+		opacity: 0.5;
+		border:3px solid red;
+	}
+	.box1{
+		display: inline-block;
+		border-top-left-radius: 60px;
+		border-bottom-right-radius: 60px;
+		background-color:white;
+		height:300px;
+		width: 300px;
+		border: 3px solid black;
+		margin-top:50px;
+		margin-left: 100px;
+		margin-right: 100px;
+		font-size: 20px;
+		text-align: center;
+	}
+	.box2{
+		height: 400px;
+		opacity: 0.7;
+		border:3px solid #F65709;
+		background-color: black;
+	}
+</style>
+</head>
+<body>
+	<h1>VISHNU'S PAGE</h1>
+	    <div class="box"> 
+	        <h2>Success has</h2>
+	        <h2>No</h2>
+	        <h2>Time Limit</h2>
+	        <h3>Maha Vishnu</h3>
+	        <h3>Web Page creater</h3>
+	    </div>
+	    <div class="box2">
+	        <div class="box1">
+	        Iam
+	        A.Navaneethamahavishnu,
+	        second year ,
+	        computer science and engineering,
+	        ksr college of engineering,
+	        tiruchengode,
+	        namakkal,
+	        tamilnadu
+	        ........
+	        web developer</div>
+	        <div class="box1">APJ Abdul Kalam Quote
+	         Creativity is the key to
+	           success in the future,
+	           and primary education 
+	           where teachers can bring creativity
+	            in children at that level.</div>
+	        <div class="box1"> தெளிவான குறிக்கோளே,
+	         வெற்றியின் முதல் ஆரம்பம்
+            அறிவியல் துறையில் 
+            போட்டி வேண்டும் ஆற்றலுக்கு</div>
+	    </div>
+</body>
