--- a/index.html
+++ b/index.html
@@ -3,81 +3,31 @@
 <head lang="en">
 <title>vishnu html</title>
 <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<
    <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
-   <script type="text/javascript">  
-function msg(){  
- alert("welcome to my official page");  
-}  
-   </script>
+   <style type="text/css">
+   	h1{
+   		text-align: center;
+   	    font-family: 'Great Vibes', cursive;
+   	    font-size: 100px;
+   	}
+   	h2{
+   		text-align: center;
+   		font-size: 80px;
+   	}
+   	body{
+   		background-image: url(back1.jpg);
+   		background-size: cover;
+   		
+   	}
+   </style>
 </head>
-<style>
-h1{ 
-   color:#0008f2;
-   background-colour:blue;
-  font-family:arial;
-font-style:italic;
-font-style:bold;
-  font-size: 120px;
-  font-weight: 600;
-  line-height: 80px;
-  margin: 0;
-}
-   h2{
-      color:#0008f2;
-   background-colour:blue;
-  font-family:Edwardian Script ITC;
-font-style:italic;
-font-style:bold;
-  font-size: 80px;
-  font-weight: 400;
-  line-height: 80px;
-      margin-top:30px;
-        margin: 90;
-   }
-body{
- background-size:100%;
-  background-repeat: no-repeat;
-  background-origin: 10px;
-  background-attachment: fixed;
-  margin: 10px;
-  margin: 10px 10px 10px 10px;
-  padding: 10px 10px 10px 10px; 
-}
-.button {
-    color: red;
-  background-color: gray;
-   border:3px solid silver;
-      margin:250px 50px 150px 50px;
-       font-weight:25px;
-  font-weight: bold;
-         padding: 10px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-   }
-</style>
-</head>
-<body background="back.jpg">
-<div class="hero-image">
-  <div class="hero-text">
-  <div class="container-fliud">
-  <div class="row">
-  <div class="col-xs-12">
-<center><marquee><h1> welcome</h1></marquee></center>
-<center><a href="vishnunew.html"><div class="button"><input type="button" value="click me!" onclick="msg()"/></button></a></center>
-</div>
-</div>
-</div>
-</div>
-</div>
-  </center></h3></center></body></html> 
+<body>
+	<h1>Welcome</h1>
+	<h2>To</h2>
+	<h1>Official Page</h1>
+	<a href="vishnunew.html"><button >Click Hear!</button></a>
+</body>
+</html>
