--- a/vishnunew.html
+++ b/vishnunew.html
@@ -57,6 +57,18 @@
 		border:3px solid #F65709;
 		background-color: black;
 	}
+   .button {
+    color: #e2360f;
+  background-color: gray;
+  font-weight: bold;
+    border: 3px solid silver;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin:20px 20px 20px 20px;
+   }
 </style>
 </head>
 <body>
@@ -92,3 +104,5 @@
             போட்டி வேண்டும் ஆற்றலுக்கு</div>
 	    </div>
 </body>
+<center><a href="data.html"><button class="button">data</button></a></center>
+</html>
