--- a/vishnunew.html
+++ b/vishnunew.html
@@ -11,13 +11,14 @@
 <style type="text/css">
 	h1{
 		text-align: center;
-		background-image: url(header.jpg);
+    background-color:  #717a7c;
 		background-size: cover;
 		opacity: 0.9;
 		font-size: 90px;
 		font-family:Algerian;
 		font-style: italic;
-
+    margin-bottom: 0px;
+    border-bottom: 2px solid black;
 	}
 	h2{
 		text-align: right;
@@ -34,8 +35,8 @@
 		background-image: url(box.jpg);
 		height:500px;
 		background-size: cover;
-		opacity: 0.5;
-		border:3px solid red;
+		opacity: 0.7;
+		border-top: 1px solid black;
 	}
 	.box1{
 		display: inline-block;
@@ -53,9 +54,9 @@
 	}
 	.box2{
 		height: 400px;
-		opacity: 0.7;
-		border:3px solid #F65709;
-		background-color: black;
+		opacity: 0.9;
+		background-color: #717a7c;
+    border-top: 4px solid black;
 	}
    .button {
     color: #e2360f;
@@ -81,27 +82,9 @@
 	        <h3>Web Page creater</h3>
 	    </div>
 	    <div class="box2">
-	        <div class="box1">
-	        Iam
-	        A.Navaneethamahavishnu,
-	        second year ,
-	        computer science and engineering,
-	        ksr college of engineering,
-	        tiruchengode,
-	        namakkal,
-	        tamilnadu
-	        ........
-	        web developer</div>
-	        <div class="box1">APJ Abdul Kalam Quote
-	         Creativity is the key to
-	           success in the future,
-	           and primary education 
-	           where teachers can bring creativity
-	            in children at that level.</div>
-	        <div class="box1"> தெளிவான குறிக்கோளே,
-	         வெற்றியின் முதல் ஆரம்பம்
-            அறிவியல் துறையில் 
-            போட்டி வேண்டும் ஆற்றலுக்கு</div>
+	        <div class="box1">“It is the satisfaction of doing it for yourself and motivating others to work with you in bringing it about. It is about the fun, innovation, creativity with the rewards being far greater than purely financial.”</div>
+	        <div class="box1">“The reasonable man adapts himself to the world; the unreasonable one persists in trying to adapt the world to himself. Therefore all progress depends on the unreasonable man.”</div>
+	        <div class="box1"> பகை, பொறாமை ஆகியவற்றை நீ வெளியிட்டால், அவை வட்டியும் முதலுமாக மீண்டும் உன்னிடமே திரும்பி வந்து சேர்ந்துவிடும்.</div>
 	    </div>
 </body>
 <center><a href="data.html"><button class="button">data</button></a></center>
